# ssyp26_ws04

./: CMakeLists.txt  mini_help_for_build.md
.github/workflows/: ci.yml
lib-files/lib/: FLAC++.lib  FLAC.lib  brotlicommon.lib  brotlidec.lib  brotlienc.lib  bz2d.lib  freetyped.lib  libpng16d.lib  sfml-audio-d.lib  sfml-graphics-d.lib  sfml-network-d.lib  sfml-system-d.lib  sfml-window-d.lib  zd.lib
lib-files/lib/manual-link/: sfml-main-d.lib
lib-files/lib/pkgconfig/: freetype2.pc  libpng.pc
src/: main.cpp
